@@ -1,3 +1,15 @@
+2001-01-29  John Harper  <jsh@eazel.com>
+
+	* session.c (panel_session_save): deleted the code to hide
+	panels after responding to a save-yourself message (that is
+	before a session shutdown). The reason is that if the shutdown
+	is later cancelled the panels are left hidden
+
+	(An alternative fix would be to reshow the panels if a
+	shutdown-cancelled message is received, but I can't see the
+	point of hiding the panels anyway - they will be destroyed if
+	the panel exits?)
+
 2001-01-30  jacob berkman  <jacob@ximian.com>
 
 	* foobar-widget.c (task_notify): hide the menu item when the task
